--- a/common/uni.css
+++ b/common/uni.css
@@ -1445,3 +1445,27 @@ radio-group label, checkbox-group label{
     left: 0;
     transform: translateY(50%);
 }
+.head{
+		margin:15upx 10upx;
+		padding: 0 20upx;
+		/* background-color: #ebebeb; */
+		height: 70upx;
+		line-height: 70upx;
+		text-align: center;
+		font-size: 30upx;
+	}
+.head_right{
+	right: 15upx;
+	margin-right:15upx;
+	font-size: 30upx;
+}
+.btn_commit{
+	background: #09BB07;
+	width:100%;
+	height:100upx;
+}
+.uni-input{
+	right: 15upx;
+	margin-right:15upx;
+	width:70%;
+}
